--- a/src/SonarQube.Client/SonarQube.Client.csproj
+++ b/src/SonarQube.Client/SonarQube.Client.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="README.md" />
     <None Include="SonarQube.Client.ruleset" />
   </ItemGroup>
   <ItemGroup>
