--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -509,8 +509,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
-  <Target Name="CopyVsixToBinaries" AfterTargets="Build" Inputs="$(TargetDir)SonarLint.vsix" Outputs="$(SolutionDir)..\binaries\SonarLint.2015.vsix">
-    <Copy OverwriteReadOnlyFiles="true" SourceFiles="$(TargetDir)SonarLint.vsix" DestinationFiles="$(SolutionDir)..\binaries\SonarLint.2015.vsix" />
+  <Target Name="CopyVsixToBinaries" AfterTargets="Build" Inputs="$(TargetDir)SonarLint.vsix" Outputs="$(SolutionDir)binaries\SonarLint.2015.vsix">
+    <Copy OverwriteReadOnlyFiles="true" SourceFiles="$(TargetDir)SonarLint.vsix" DestinationFiles="$(SolutionDir)binaries\SonarLint.2015.vsix" />
   </Target>
   <Import Project="..\..\packages\Grpc.Core.1.4.1\build\net45\Grpc.Core.targets" Condition="Exists('..\..\packages\Grpc.Core.1.4.1\build\net45\Grpc.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
