--- a/src/Integration.Vsix_2017/Integration.Vsix.csproj
+++ b/src/Integration.Vsix_2017/Integration.Vsix.csproj
@@ -578,7 +578,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <PropertyGroup>
-    <PostBuildEvent>copy /y "$(TargetDir)SonarLint.vsix" "$(SolutionDir)..\binaries\SonarLint.2017.vsix"</PostBuildEvent>
+    <PostBuildEvent>copy /y "$(TargetDir)SonarLint.vsix" "$(SolutionDir)binaries\SonarLint.2017.vsix"</PostBuildEvent>
   </PropertyGroup>
   <Target Name="IncludeDllsVsix" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
