--- a/src/Integration.UnitTests_2017/Integration.UnitTests.csproj
+++ b/src/Integration.UnitTests_2017/Integration.UnitTests.csproj
@@ -224,11 +224,11 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup Label="NonGac">
-    <Reference Include="Microsoft.TeamFoundation.Client">
+    <Reference Include="Microsoft.TeamFoundation.Client, Version=16.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>$(VsCommonIdeDirectory)CommonExtensions\Microsoft\TeamFoundation\Team Explorer\Microsoft.TeamFoundation.Client.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.TeamFoundation.Controls">
+    <Reference Include="Microsoft.TeamFoundation.Controls, Version=16.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>$(VsCommonIdeDirectory)CommonExtensions\Microsoft\TeamFoundation\Team Explorer\Microsoft.TeamFoundation.Controls.dll</HintPath>
       <Private>True</Private>
     </Reference>
