--- a/src/Integration.Vsix.UnitTests/Integration.Vsix.UnitTests.csproj
+++ b/src/Integration.Vsix.UnitTests/Integration.Vsix.UnitTests.csproj
@@ -341,6 +341,10 @@
     </AdditionalFiles>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\sonarqube-webclient\SonarQube.Client\SonarQube.Client.csproj">
+      <Project>{5e513fc3-bda7-40f2-8b6a-1bb9372acb99}</Project>
+      <Name>SonarQube.Client</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Integration.Vsix\Integration.Vsix.csproj">
       <Project>{ff2ad819-28f4-493a-8e9b-1d3f16bd4689}</Project>
       <Name>Integration.Vsix</Name>
@@ -348,10 +352,6 @@
     <ProjectReference Include="..\Integration\Integration.csproj">
       <Project>{03278c1a-ee78-4fa7-a5b0-1ab0a81ea76f}</Project>
       <Name>Integration</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SonarQube.Client\SonarQube.Client.csproj">
-      <Project>{5e513fc3-bda7-40f2-8b6a-1bb9372acb99}</Project>
-      <Name>SonarQube.Client</Name>
     </ProjectReference>
     <ProjectReference Include="..\TestInfrastructure\TestInfrastructure.csproj">
       <Project>{fbd8024a-9795-4e5b-938e-afe44fca240c}</Project>
