--- a/src/TestInfrastructure/TestInfrastructure.csproj
+++ b/src/TestInfrastructure/TestInfrastructure.csproj
@@ -351,6 +351,10 @@
     </AdditionalFiles>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\sonarqube-webclient\SonarQube.Client\SonarQube.Client.csproj">
+      <Project>{5e513fc3-bda7-40f2-8b6a-1bb9372acb99}</Project>
+      <Name>SonarQube.Client</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Integration.Vsix\Integration.Vsix.csproj">
       <Project>{ff2ad819-28f4-493a-8e9b-1d3f16bd4689}</Project>
       <Name>Integration.Vsix</Name>
@@ -362,10 +366,6 @@
     <ProjectReference Include="..\Integration\Integration.csproj">
       <Project>{03278c1a-ee78-4fa7-a5b0-1ab0a81ea76f}</Project>
       <Name>Integration</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SonarQube.Client\SonarQube.Client.csproj">
-      <Project>{5E513FC3-BDA7-40F2-8B6A-1BB9372ACB99}</Project>
-      <Name>SonarQube.Client</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
