--- a/nuget.config
+++ b/nuget.config
@@ -11,7 +11,7 @@
 
   <packageSources>
     <add key="NuGet official package source" value="https://api.nuget.org/v3/index.json" />
-    <add key="SonarSource - QA" value="https://repox.sonarsource.com/api/nuget/sonarsource-nuget-public" />
+    <add key="SonarSource - QA" value="https://repox.jfrog.io/repox/api/nuget/sonarsource-nuget-public" />
   </packageSources>
 
 </configuration>
