--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -401,6 +401,12 @@
       <Project>{5e513fc3-bda7-40f2-8b6a-1bb9372acb99}</Project>
       <Name>SonarQube.Client</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Integration.TeamExplorer\Integration.TeamExplorer.csproj">
+      <Project>{9FCAEACD-EDEA-42D3-A8E4-16E42D1CF8F4}</Project>
+      <Name>Integration.TeamExplorer</Name>
+      <IncludeOutputGroupsInVSIX>BuiltProjectOutputGroup%3bBuiltProjectOutputGroupDependencies%3bGetCopyToOutputDirectoryItems%3bSatelliteDllsProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
+      <IncludeOutputGroupsInVSIXLocalOnly>DebugSymbolsProjectOutputGroup%3b</IncludeOutputGroupsInVSIXLocalOnly>
+    </ProjectReference>
     <ProjectReference Include="..\Progress\Progress.csproj">
       <Project>{140a6fe4-c8f7-4af7-b4c8-eeeae4e0b1a4}</Project>
       <Name>Progress</Name>
